# ti-cli

./: .env  .gitignore  Indicators.py  OLD_VERSION.md  README.md  config.ini  csv_write_to_sql_server.py  main.py  pyproject.toml  pytest.ini  requirements.txt  signals.py  test_indicators.py
calculators/: technical_indicators.py
config/: database_config.py
output/: analysis.json
pattern_detection/: pattern_detection.py
providers/: stock_data_provider.py
repositories/: stock_data_repository.py
services/: stock_data_service.py
signals/: analyzer.py  config.py  db.py  indicators.py  trades.py
ti/: ti.py
ti/analyzers/: candle_pattern.py  indicator_calc.py  indicator_signals.py  signal_generate.py
ti/calculators/: tech_indicator.py  technical_indicators.py
ti/config/: config_manage.py  config_manager.py  database_config.py  pattern_config.py  signal_config.py
ti/database/: connection.py  repositories.py  tables.py
ti/pattern/: kline_pattern.py
ti/providers/: stock_data_provider.py
ti/repositories/: signal_repository.py  stock_data_repository.py
ti/services/: config_service.py  database_service.py  signal_service.py  stock_data_service.py
ti/signals/: __init__.py  config.py  signal_analyzer.py  tech_analyze.py  tech_feature_analyze.py  trade_signal_generate.py
ti/utils/: colors.py  helpers.py
utils/: display_utils.py
