[project]
name = "ti-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyodbc>=5.3.0",
    "ta-lib",
    "yfinance>=0.2.66",
]

[project.scripts]
ti = "ti.ti:main"

[tool.setuptools]
packages = ["ti", "ti.services", "ti.providers", "ti.repositories", 
            "ti.calculators", "ti.config","ti.pattern",
            "ti.signals"]
# [tool.uv.sources]
# ta-lib = { path = "ta_lib-0.6.8-cp312-cp312-win_amd64.whl" }
